--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
       <p>上圖是作品集本來設計的樣子，但在寫程式時，發現這樣對於一個一頁式網頁，其實不會給使用者非常好的體驗，原因是每個人的裝置比例都不同，若換成手機看也許畫面就不會那麼美觀，另外右側的資訊似乎與左邊的圖重複，因此最後決定純粹展示作品，不多做描述。<br><br>在寫完大螢幕的網頁後，我開始設計小螢幕（平板、手機版）的介面，特別針對手機版的簡歷（About me. 部分）做頁面的調整，讓手機使用者有更好的體驗。<br><br>手機橫式的畫面也經過特別的調整，在 About me. 的部分，看過朋友們瀏覽網頁時，右手會遮擋住部分文字，因此我將文字部分稍微往左移，讓瀏覽網頁更輕鬆。</p><img src="images/5.png"/>
       <p>網站連結：<a href="https://likeapplepie.github.io/Yutzu/" target="_blank">https://likeapplepie.github.io/Yutzu/</a>
         <footer>
-          <p class="recommend">推薦閱讀
-            <a href="https://likeapplepie.github.io/YutzuPortfolio-2/" target="_blank">  
-              <div class="block block2"><img src="images/desk.png"/>
-                <div class="shade shade2">
-                  <p>互動式圖像履歷</p>
-                </div>
+          <p class="recommend">推薦閱讀</p>
+          <a href="https://likeapplepie.github.io/YutzuPortfolio-2/" target="_blank">  
+            <div class="block block2"><img src="images/desk.png"/>
+              <div class="shade shade2">
+                <p>互動式圖像履歷</p>
               </div>
-            </a>
-          </p>
+            </div>
+          </a>
+          
           <p class="foot">Contact Me! </p><a class="fb" href="https://www.facebook.com/ImYutzuChen" target="_blank"><img class="fbfoot" src="images/fb.png"/></a><a class="ig" href="https://instagram.com/_lapie?utm_source=ig_profile_share&amp;igshid=17400dupw6rhn" target="_blank"><img class="igfoot" src="images/ig.png"/></a><a class="home" href="https://likeapplepie.github.io/YutzuPortfolio/"><img class="homefoot" src="images/home.png"/></a>
         </footer>
       </p>
