--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <body>
     <div class="sidebar"><a href="https://likeapplepie.github.io/YutzuPortfolio/"> 
         <h1 class="name">陳佑慈 </h1></a>
-      <ul class="group">
+      <ul class="group1">網頁設計
         <li> <a class="resume2" href="https://likeapplepie.github.io/YutzuPortfolio-1/">一頁式履歷</a></li>
         <li><a class="resume1" href="https://likeapplepie.github.io/YutzuPortfolio-2/">互動式圖像履歷</a></li>
+      </ul>
+      <ul class="group2">平面設計
+        <li> <a class="resume3" href="https://likeapplepie.github.io/YutzuPortfolio-3/">介面 / 海報設計</a></li>
+        <li><a class="resume4" href="https://likeapplepie.github.io/YutzuPortfolio-4/">動畫繪製／影片剪輯</a></li>
       </ul><a class="fb" href="https://www.facebook.com/ImYutzuChen" target="_blank"><img src="images/fb.png"/></a><a class="ig" href="https://instagram.com/_lapie?utm_source=ig_profile_share&amp;igshid=17400dupw6rhn" target="_blank"><img src="images/ig.png"/></a>
     </div>
     <div class="main">
